remove outdate part of text

--- a/webroot/os.html
+++ b/webroot/os.html
@@ -48,7 +48,7 @@
               <p>
               All source code is located at <a href="https://github.com/safecoinfolio/safecoinfolio" target="_blank">https://github.com/safecoinfolio/safecoinfolio</a>
               </p>
-          <p>This website is offered under the <a href="/tc.html">GNU license</a> and is open source -- all source code is freely available as there is no server side code. In addition to that, we are planning on releasing the <em>git</em> repository publicly online as well.</p>
+          <p>This website is offered under the <a href="/tc.html">GNU license</a> and is open source -- all source code is freely available in the github repository.</p>
   </div>
 </div>
         <div class="mdl-layout-spacer"></div>
