move the h2 to in between header and main

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -31,6 +31,8 @@
     </div>
   </header>
 
+  <h2 class="sub">Your safecoin portfolio -- always your data, encrypted and on your device</h2>
+  
   <main class="mdl-layout__content">
     <div class="page-content">
 
@@ -42,7 +44,6 @@
 
           <div class="mdl-grid inner-grid">
             <div class="mdl-cell mdl-cell--8-col">
-              <h2>Your safecoin portfolio -- always your data, encrypted and on your device</h2>
 
               <div>Total <span class="total_usd">-</span> USD</div>
 
