--- a/webroot/index.html
+++ b/webroot/index.html
@@ -45,9 +45,17 @@
           <div class="mdl-grid inner-grid">
             <div class="mdl-cell mdl-cell--8-col">
 
-              <div>Total <span class="total_usd">-</span> USD</div>
-
-              <div><em>prices updated every 5 minutes</em></div>
+              <div>
+                  <span class="total_label">
+                      <span class="total_label_text">Total
+                      </span>
+                  </span>
+                  <span class="mdl-chip mdl-chip--contact">
+                      <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">USD</span>
+                      <span class="mdl-chip__text total_usd">0</span>
+                  </span>
+                  <em class="price_info">prices updated every 5 minutes</em>
+              </div>
 
               <div class="portfolio_table"></div>
             </div>
