table_leader style update

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -45,7 +45,7 @@
           <div class="mdl-grid inner-grid">
             <div class="mdl-cell mdl-cell--8-col">
 
-              <div>
+              <div class="table_leader">
                   <span class="total_label">
                       <span class="total_label_text">Total
                       </span>
