replace text emoji with unicode emoji

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -153,7 +153,7 @@
         <div class="mdl-logo">www.safecoinfolio.com</div>
         <ul class="mdl-mega-footer__link-list">
           <li><a href="/tc.html">Privacy &amp; Terms</a></li>
-          <li>&lt;3 since the btc block 474829</li>
+          <li>💗 since the btc block 474829</li>
         </ul>
       </div>
 
