improve grammar in a caption

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -54,7 +54,7 @@
                       <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">USD</span>
                       <span class="mdl-chip__text total_usd">0</span>
                   </span>
-                  <em class="price_info">prices updated every 5 minutes</em>
+                  <em class="price_info">prices update every 5 minutes</em>
               </div>
 
               <div class="portfolio_table"></div>
