--- a/webroot/index.html
+++ b/webroot/index.html
@@ -51,7 +51,7 @@
                       </span>
                   </span>
                   <span class="mdl-chip mdl-chip--contact">
-                      <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">USD</span>
+                      <span class="mdl-chip__contact mdl-color-text--white">USD</span>
                       <span class="mdl-chip__text total_usd">0</span>
                   </span>
                   <em class="price_info">prices update every 5 minutes</em>
@@ -63,7 +63,7 @@
             <div class="mdl-cell mdl-cell--4-col">
 
               <div class="mdl-card mdl-shadow--2dp">
-                <div class="mdl-card__title mdl-card--expand" style="background-color: #a8e8ed;">
+                <div class="mdl-card__title mdl-card--expand">
                   <h2 class="mdl-card__title-text">Add coin</h2>
                 </div>
 
@@ -86,7 +86,7 @@
               </div>
 
               <div class="demo-card-square mdl-card mdl-shadow--2dp">
-                <div class="mdl-card__title mdl-card--expand" style="background-color: #a8e8ed;">
+                <div class="mdl-card__title mdl-card--expand">
                   <h2 class="mdl-card__title-text">Change user</h2>
                 </div>
                 <div class="mdl-card__supporting-text">
@@ -153,7 +153,7 @@
         <div class="mdl-logo">www.safecoinfolio.com</div>
         <ul class="mdl-mega-footer__link-list">
           <li><a href="/tc.html">Privacy &amp; Terms</a></li>
-          <li>💗 since the btc block 474829</li>
+          <li><span style="color:#f61067">💗</span> since the btc block 474829</li>
         </ul>
       </div>
 
