apply the new style to the header/logo text

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -27,7 +27,7 @@
 
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
-      <span class="mdl-layout-title"><h1 class="page-header">SafeCoinFolio</h1></span>
+      <span class="mdl-layout-title"><h1 class="page-header"><span class="logo-text">SafeCoinFolio</span></h1></span>
     </div>
   </header>
 
