--- a/webroot/index.html
+++ b/webroot/index.html
@@ -32,7 +32,7 @@
   </header>
 
   <h2 class="sub">Your safecoin portfolio -- always your data, encrypted and on your device</h2>
-  
+
   <main class="mdl-layout__content">
     <div class="page-content">
 
@@ -191,6 +191,6 @@
   </div>
 </dialog>
 
-<script src="scf.js"></script>
+<script src="/dynamic/js/scf.js"></script>
 </body>
 </html>
