add msg when portfolio empty

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -78,6 +78,16 @@
                       <input class="mdl-textfield__input" type="number" step="0.000000001" id="q" name="q">
                       <label class="mdl-textfield__label" for="q">Quantity</label>
                     </div>
+<div class="add_extra">
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="date" id="date" name="date">
+        <label class="mdl-textfield__label" for="date">Date</label>
+    </div>
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="number" step="0.01" id="p" name="p">
+        <label class="mdl-textfield__label" for="p">Price per unit</label>
+    </div>
+</div>
                   </form>
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
