--- a/webroot/index.html
+++ b/webroot/index.html
@@ -85,7 +85,7 @@
     </div>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <input class="mdl-textfield__input" type="number" step="0.01" id="p" name="p">
-        <label class="mdl-textfield__label" for="p">Price per unit</label>
+        <label class="mdl-textfield__label" for="p">Price per unit (USD)</label>
     </div>
 </div>
                   </form>
