add transaction editing/deleting and misc. bug fixes

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -47,12 +47,20 @@
 
               <div class="table_leader">
                   <span class="total_label">
-                      <span class="total_label_text">Total
+                      <span class="total_label_text">Total value
                       </span>
                   </span>
                   <span class="mdl-chip mdl-chip--contact">
                       <span class="mdl-chip__contact mdl-color-text--white">USD</span>
                       <span class="mdl-chip__text total_usd">0</span>
+                  </span>
+
+                  <span class="total_label">
+                      <span class="total_pl_text">Total P/L</span>
+                  </span>
+                  <span class="mdl-chip mdl-chip--contact">
+                      <span class="mdl-chip__contact mdl-color-text--white">USD</span>
+                      <span class="mdl-chip__text total_pl">0</span>
                   </span>
                   <em class="price_info">prices update every 5 minutes</em>
               </div>
