fix the supported-coins page

--- a/webroot/supported-coins.html
+++ b/webroot/supported-coins.html
@@ -60,9 +60,8 @@
   </main>
 </div>
 
-<dialog></dialog>
 
-<script src="scf.js"></script>
+<script src="/dynamic/js/scf.js"></script>
 <script>
 
 function fc(str) {
