this is the running p/l (excludes realized p/l)

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -56,7 +56,7 @@
                   </span>
 
                   <span class="total_label">
-                      <span class="total_pl_text">Total P/L</span>
+                      <span class="total_pl_text">Total running P/L</span>
                   </span>
                   <span class="mdl-chip mdl-chip--contact">
                       <span class="mdl-chip__contact mdl-color-text--white">USD</span>
