add an item for changing the base currency

--- a/webroot/backlog.html
+++ b/webroot/backlog.html
@@ -81,7 +81,10 @@
                 <td class="mdl-data-table__cell--non-numeric">Load balanced server nodes</td>
                 <td class="mdl-data-table__cell--non-numeric">Removes the downtime when new version is being deployed</td>
               </tr>
-
+              <tr>
+                <td class="mdl-data-table__cell--non-numeric">Choose the base currency</td>
+                <td class="mdl-data-table__cell--non-numeric">Instead of USD, the base currency can be chosen from a list of fiats and cryptocurrencies</td>
+              </tr>
             </tbody>
           </table>
 
