--- a/webroot/index.html
+++ b/webroot/index.html
@@ -62,6 +62,15 @@
                       <span class="mdl-chip__contact mdl-color-text--white">USD</span>
                       <span class="mdl-chip__text total_pl">0</span>
                   </span>
+
+                  <span class="total_label">
+                      <span class="total_rpl_text">Total realised P/L</span>
+                  </span>
+                  <span class="mdl-chip mdl-chip--contact">
+                      <span class="mdl-chip__contact mdl-color-text--white">USD</span>
+                      <span class="mdl-chip__text total_rpl">0</span>
+                  </span>
+
                   <em class="price_info">prices update every 5 minutes</em>
               </div>
 
